# nyc-bike-routes

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml
app_pages/: data.py  home.py  mayors.py  miles.py
bike_routes/: data.py  domain.py  facilities.py  map_views.py  repositories.py  views.py
