[project]
name = "nyc-bike-routes"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "httpx>=0.28.1",
    "nbformat>=4.2.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "streamlit>=1.59.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
    "watchdog>=6.0.0",
]
